[package]
name = "mut_cell"
description = "Cell for safe in place mutation and usage under most circumstances"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/mcmah309/mut_cell.git"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
